--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "lanting-bookmarks",
+  "name": "mitu-app",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "lint": "oxlint . --tsconfig tsconfig.json --import-plugin --vue-plugin",
-    "lint:fix": "oxlint . --tsconfig tsconfig.json --import-plugin --vue-plugin --fix",
-    "format": "oxfmt . --write",
-    "format:check": "oxfmt . --check",
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev:quiet": "set TAO_LOG_LEVEL=error&& set WRY_LOG_LEVEL=error&& tauri dev"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
-    "@tauri-apps/plugin-dialog": "^2.4.5",
-    "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2.5.2",
-    "@tauri-apps/plugin-store": "~2.4.2",
-    "pinia": "^3.0.4",
-    "vue": "^3.5.13",
-    "vue-router": "^4.6.4"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
@@ -31,8 +22,6 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.22",
     "daisyui": "^5.5.14",
-    "oxfmt": "^0.24.0",
-    "oxlint": "^1.39.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.6.2",
