--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/plugin-dialog": "^2.6.0",
+    "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2.5.2",
-    "vue": "^3.5.13"
+    "@tauri-apps/plugin-store": "^2.4.2",
+    "pinia": "^3.0.4",
+    "vue": "^3.5.13",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
