--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-store": "^2.4.2",
     "pinia": "^3.0.4",
+    "sortablejs": "^1.15.2",
     "vue": "^3.5.13",
+    "vuedraggable": "^4.1.0",
     "vue-router": "4"
   },
   "devDependencies": {
